# aws_client_tests

./: README.md  main.py  pyproject.toml
src/: aws_client.py  aws_parser_client_async.py
src/parsers/: mark_it_down.py  target_schemas.py  textract_response_parser.py  textract_schemas.py
src/services/: pdf_analysis_services.py
src/utils/: pdf_tools.py
test/: aws_client_test.py  t2_aws_parser_client_async.py
test/parsers/: t1_market_it_down.py  t2_textract_result_parsing.py
test/services/: pdf_analysis_services_test.py
